# github-issues-lakehouse

./: .env.example  .gitignore  README.md  config.example.yml  config.yml  pyproject.toml  requirements.txt
docs/: app.js  index.html  style.css
docs/data/: kpi_monthly_global.csv
scripts/: export_pages_data.py
src/gh_issues_lakehouse/: __main__.py  cli.py  demo.py  gold.py  ingest.py  silver.py
src/gh_issues_lakehouse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
