[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-issues-lakehouse"
version = "0.1.0"
description = "Bronze/Silver/Gold lakehouse pipeline built from GitHub Issues"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
